# ETSIA_ELOKO

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  SYSTEM_IMPROVEMENTS.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
alembic/: env.py
alembic/versions/: ee1c9a8686b1_schema_complet_initial.py
app/: config.py  main.py
app/api/gateway/: collection.py  market.py  prediction.py
app/api/v1/: auth.py  users.py
app/core/: i18n.py  security.py
app/locales/: en.json  fr.json
app/models/: models.py
app/schemas/: schemas.py
app/static/: index.html  package-lock.json  package.json
app/static/src/app/components/: Layout.tsx
app/static/src/app/pages/: ActualitesPage.tsx  AdminPage.tsx  LandingPage.tsx  NotificationsPage.tsx  ProjectSimulatorPage.tsx  RiskRegisterPage.tsx
app/static/src/imports/: DESIGN-1.md
app/static/src/styles/: fonts.css  index.css
docker/nginx/: frontend.conf
eloko-frontend/: README.md
eloko-frontend/src/app/: routes.tsx
eloko-frontend/src/app/pages/: AIPredictivePage.tsx  BillingPage.tsx  DashboardPage.tsx  LoginPage.tsx  MarketsPage.tsx
